--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,8 @@ html {
 
 body {
     width: 100%;
-    margin: 0;
+    max-width: 360px;
+    margin: 0 auto;
     background: #1e1e1e;
     box-sizing: border-box;
     font-family: 'Inter', 'Arial', sans-serif;
@@ -46,25 +47,32 @@ blockquote {
 .header__nav {
     display: flex;
     flex-direction: column;
-    gap: 14px;
+    gap: 12px;
 }
 
 .header__nav_link {
+    width: fit-content;
     line-height: 19.2px;
     color: #fff;
+    text-decoration: none;
+    border-bottom: 1px solid #fff;
+}
+
+.header__nav_link.active {
+    border-bottom: 0;
 }
 
 .banner {
     background-image: url(../images/cover.svg);
     background-repeat: no-repeat;
     background-size: 95%;
-    background-position: top 50px left 20px;
+    background-position: top 54px left 20px;
 }
 
 .banner__title {
     display: flex;
     flex-direction: column;
-    padding: 28px 0 10px 20px;
+    padding: 32px 24px 10px 20px;
     font-family: 'EB Garamond', serif;
     font-size: 72px;
     font-weight: 400;
@@ -72,7 +80,7 @@ blockquote {
 }
 
 .text {
-    margin: 26px 0;
+    margin-bottom: 24px;
     line-height: 21.6px;
 }
 
@@ -94,13 +102,14 @@ blockquote {
 }
 
 .white-list {
-    padding-bottom: 10px;
+    padding-bottom: 14px;
     color: #f5f5f5;
 }
 
 .white-list__header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 24px;
     color: #ccc;
 }
 
@@ -149,7 +158,7 @@ blockquote {
     flex-direction: column;
     border-radius: 30px;
     margin-bottom: 33px;
-    padding: 20px;
+    padding: 20px 21px 20px 20px;
     background: #FEE42A;
     color: #131313;
 }
@@ -168,7 +177,7 @@ blockquote {
 }
 
 .advice__caption {
-    margin: 9px 0 8px;
+    margin: 10px 0 8px;
     font-weight: 700;
 }
 
@@ -187,14 +196,19 @@ blockquote {
 .footer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border-top: 1px solid #FEE42A;
-    padding: 21px 20px;
-    margin-top: 38px;
+    padding: 20px;
+    margin-top: 36px;
 }
 
 .footer__social-block {
     display: flex;
-    gap: 18px;
+    gap: 17px;
+}
+
+.footer__social-item {
+    list-style-type: none;
 }
 
 .social-block__link {
